force-app/main/default/objects/Janati_RR__Round_Robin_Group_Member__c/fields/Janati_RR__Last_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Janati_RR__Last_Assignment__c</fullName>
    <label>Last Assignment</label>
    <type>DateTime</type>
</CustomField>