force-app/main/default/objects/Janati_RR__Round_Robin_Group_Member__c/fields/Janati_RR__User_Active__c.field-meta.xml
<CustomField>
    <fullName>Janati_RR__User_Active__c</fullName>
    <formula>Janati_RR__User_Rep__r.IsActive</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User: Active</label>
    <type>Checkbox</type>
</CustomField>