force-app/main/default/objects/Janati_RR__Round_Robin_Group_Member__c/fields/Janati_RR__User_Rep__c.field-meta.xml
<CustomField>
    <fullName>Janati_RR__User_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Round_Robin_Leads</relationshipName>
    <type>Lookup</type>
</CustomField>